# DistributedIntrusionDetectionSystem

./: CMakeLists.txt  README.md
inc/: detector.h  network.h  simulator.h  utils.h
src/: detector.cpp  main.cpp  network.cpp  simulator.cpp  utils.cpp
tests/: CMakeLists.txt  test_detector.cpp  test_network.cpp
